implementations/rust/ockam/ockam_node_test_attribute/tests/node/fail_if_macro_has_arg.rs
#[ockam_node_test_attribute::node(timeout = 100)]
async fn main(mut c: ockam::Context) {
    c.stop().await.unwrap();
}
